--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <div id="chat">
         <div id="chat-window">
             <div id="output"></div>
+            <div id="feedback"></div>
         </div>
         <input type="text" id="handle" placeholder="Handle" />
         <input type="text" id="message" placeholder="Message" />
